# sisyphus

./: .editorconfig  .gitignore  .miniflare.env  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.toml
.github/workflows/: prod.yml  publish.yml  publish_prod.yml  staging.yml
src/: index.ts  lib.rs  utils.rs
src/routes/: download.rs  mod.rs  teapot.rs
