[package]
name = "modrinth-workers-1"
version = "0.1.3"
authors = ["Danielle Hutzley <endergeryt@gmail.com>"]
description = "CloudFlare workers for Modrinth"
license = "AGPL-3.0-or-later"
repository = "https://github.com/modrinth/sisyphus"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
chrono = "0.4.19"
futures = "0.3.21"
http = "0.2.6"
lazy_static = "1.4.0"
#serde_json = "1.0.67"
worker = "0.0.9"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
